# cubio

./: .gitignore  README.md  cubio_use_case.py  mask_testing.py  pyproject.toml  quick_test.py  xarray_test.py
src/cubio/: __init__.py  cube_context.py  cube_data.py  cube_mask.py  cube_reader.py  cube_size_tools.py  cube_writer.py  envi_hdr_tools.py  geotransform.py  types.py
src/cubio/conevnience_functions/: envi_file_interface.py
src/cubio/conevnience_functions.py/: envi_file_interface.py
src/cubio/convenience_functions/: __init__.py  envi_file_interface.py
src/cubio/cube_data/: __init__.py  core.py  cube_data.py  geospatial.py  masking.py  protocols.py  transformation.py  validation.py
src/cubio/data/: crs_wkt_strings.py
src/cubio/geotools/: generate_geoloc_backplane.py  generate_raster_from_shapefile.py  georeference_from_gcps.py  georeference_satellite_swath.py  grid_to_grid_resampling.py  raster_alignment.py
src/cubio/geotools/models/: __init__.py  bounding_box_model.py  gcp_model.py  geotransform_model.py
