[project]
name = "cubio"
version = "0.1.0"
description = "A fully typed and pydantic-compatible framework for reading and writing geospatial data cubes."
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "rasterio (>=1.5.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "affine (>=2.4.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "spectralio (>=0.1.11,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
