[project]
name = "cubio"
version = "0.1.0"
description = "A fully typed and pydantic-compatible framework for reading and writing geospatial data cubes."
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
license = {text = "LICENSE"}
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "rasterio (>=1.5.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "affine (>=2.4.0,<3.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "spectralio (>=0.1.11,<0.2.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scipy-stubs (>=1.17.1.0,<2.0.0.0)",
    "xarray (>=2026.2.0,<2027.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "tqdm-stubs (>=0.2.1,<0.3.0)",
    "pyresample (>=1.35.0,<2.0.0)",
    "zarr (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
